# src/ide/

EXTRA_DIST = \
 $(shell find $(srcdir)/codeblocks -name "*.cbp") \
 $(shell find $(srcdir)/codeblocks -name "*.depend") \
 $(shell find $(srcdir)/codeblocks -name "*.layout") \
 codeblocks/README \
 codeblocks/supertuxkart.workspace \
 vc9/supertuxkart.sln \
 vc9/supertuxkart.vcproj \
 vc9/bullet_lib.vcproj \
 vc9/enet.vcproj \
 vc9/README \
 vc10/bullet_lib.vcxproj \
 vc10/enet.vcxproj \
 vc10/supertuxkart.sln \
 vc10/supertuxkart.vcxproj \
 vc10/supertuxkart.vcxproj.filters \
 Xcode/cleanupRelease.sh \
 Xcode/Config.xcconfig \
 Xcode/stk.icns \
 Xcode/SuperTuxKart-Info.plist \
 Xcode/STK_XCode.xcodeproj/project.pbxproj
